--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/my-app/
+
 # dependencies
 /node_modules
 /.pnp
@@ -15,7 +17,7 @@
 
 # next.js
 /.next/
-/out/
+# /out/
 
 # production
 /build
