--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbo",
+    "build": "NODE_ENV=production next build",
+    "export": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint"
   },
