--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/my-app/
+
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
 /coverage
 
-# next.js
+# next.js 
 /.next/
-/out/
+# /out/
 
 # production
 /build
@@ -23,10 +30,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
