--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "NODE_ENV=production next build",
-    "export": "NODE_ENV=production next build",
+    "build": "next build",
+    "build:static": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen"
