--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "build:static": "NODE_ENV=production next build",
-    "start": "next start",
+    "dev": "next dev",
+    "build": "next build", 
+    "start": "node server.js",
     "lint": "next lint",
     "codegen": "graphql-codegen"
   },
